src/styles.scss
:root {
  --color-white: #fff;
  --color-white-dimmed: #fffe;
  --color-black: #222;
  --color-half-black: #0008;
  --color-blue: #2df;
  --color-dark-blue: #08a;
  --color-purple: #909;
  --color-yellow: #fd2;
  --color-half-yellow: #fd28;
}

body {
  overflow: hidden;
}

button {
  margin: 0;
  padding: 0.4rem 1rem;
  background-color: var(--color-white);
  border: 1px solid var(--color-half-black);
  border-radius: 0.4rem;
}

.menu {
  position: absolute;
  top: 0;
  right: 0;
  width: 10rem;
  height: 100vh;
  padding: 0.5rem 1rem;
  background: var(--color-white-dimmed);
  margin: 0;
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  grid-gap: 0.6rem;
  grid-auto-rows: auto;
  @media (max-width: 512px) {
    width: auto;
    height: auto;
    bottom: 0;
    top: auto;
    grid-gap: 0.4rem;
    padding: 0.4rem;
    .control {
      grid-column: span 6;
      &--color,
      &--checkbox {
        grid-column: span 3;
      }
      &--select {
        grid-column: span 3;
      }
      &--imageUrl {
        grid-column: span 6;
      }
    }
    button {
      grid-column: span 4;
      padding: 0.5rem 0;
    }
  }
}

.control {
  display: flex;
  flex-direction: column-reverse;
  justify-content: flex-start;
  grid-column: 1 / span 12;
  border: none;
  padding: 0;
  font-size: 0.8rem;
  &--checkbox {
    flex-direction: row;
    align-self: center;
    justify-content: flex-end;
    grid-column: span 6;
  }
  &--color {
    grid-column: span 6;
    position: relative;
    width: 1rem;
  }
  &__button {
    grid-column: span 12;
    width: 100%;
  }
  &--select {
    grid-column: span 6;
    select {
      width: 100%;
    }
  }
  &--imageUrl {
    input {
      max-width: 100%;
    }
  }
}
label {
  user-select: none;
  text-transform: capitalize;
  &--name {
    margin-top: 0.4rem;
  }
  .menu--collapsed & {
    display: none;
  }
  [type="range"] + & {
    display: flex;
    justify-content: space-between;
  }
  [type="checkbox"] + & {
    margin: 0;
  }
  [type="color"] + & {
    display: none;
  }
}

.splash {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  button {
    width: 9rem;
    margin-right: 1rem;
  }
  @media (max-width: 512px) {
    flex-direction: column;
    button {
      margin: 1rem;
    }
  }
}

.face-editor {
  position: absolute;
  width: 100vw;
  height: 100vh;
  left: 0;
  top: 0;
  background: var(--color-white);
  &__dot {
    fill: var(--color-blue);
    stroke: none;
    &:hover {
      fill: var(--color-purple);
    }
    &--first {
      stroke: var(--color-half-black);
    }
  }
  &__area {
    fill: var(--color-half-yellow);
    stroke: var(--color-blue);
  }
  &__active-area {
    fill: none;
    stroke: var(--color-purple);
    stroke-width: 1px;
  }
}

.wrap {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
}

.drawing {
  position: relative;
}

.mask-path {
  &--default {
    stroke: none;
  }
  &--chunk {
    fill: var(--color-half-yellow);
    stroke: none;
    &--active {
      fill: none;
      stroke-width: 3px;
      stroke: var(--color-yellow);
    }
  }
}

.cursor {
  fill: var(--color-blue);
  stroke: var(--color-dark-blue);
  stroke-width: 0.8rem;
  transition: stroke-width 0.1s ease-out;
  &--active {
    stroke-width: 0;
  }
}

